# waifu-guesser

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
src/waifu_guesser/: __init__.py
src/waifu_guesser/backend/: config.py  guesser.py
src/waifu_guesser/frontend/: app.py
src/waifu_guesser/frontend/templates/: evaluate.html  index.html
